--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   carousel_slider: ^4.2.1
   intl: ^0.18.0
+  youtube_player_flutter: ^8.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
